changed table editor container overflow handlign from scroll to auto to avoid firefox scrollbars

--- a/src/components/TableEditor.scss
+++ b/src/components/TableEditor.scss
@@ -14,7 +14,7 @@
 
   .data-grid-container {
     display: block;
-    overflow: scroll;
+    overflow: auto;
     position: relative;
     height: 100%;
   }
